[build-system]
requires = [
  "setuptools>=72",
  "wheel",
  "Cython>=0.29.28"
]

[project]
name = "low-similarity-outliers"
description = "LSO model"
requires-python = ">=3.10"
dynamic = ["version", "readme"]
dependencies = [
  "boto3",
  "joblib==1.2.0",
  "numpy>=1.23.4,<1.24.0",
  "protobuf<3.21",
  "scikit-learn==1.5.2",
  "s3fs",
  "pandas>=1.3.5,<1.4.0",
  "shap==0.43.0",
  "pyarrow"
]

[tool.setuptools.dynamic]
version = { attr = "outliers.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools]
packages = ["outliers"]

[tool.pytest.ini_options]
addopts = "-vv -p no:warnings"
testpaths = ["tests"]
filterwarnings = [
  "error",
  "ignore::UserWarning",
  "ignore::DeprecationWarning:",
]

[project.optional-dependencies]
serve = ["fastapi==0.115.4", "uvicorn==0.21.*"]
dev = ["black==22.3.*", "isort==5.10.*", "ruff==0.0.291", "pre-commit==3.3.*", "pip-tools"]
test = [
  "coverage",
  "mock",
  "pytest==6.*",
  "pytest-cov",
  "pytest-mock",
  "pytest-socket",
  "moto[cloudwatch,s3]>=4.0.0,<5.0.0",
  "python-dateutil==2.8.*",
  "sure==2.0.*",
  "pytest_aws_config",
  "httpx",
  "pytest-randomly",
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
ignore = ["E501", "E721", "F821", "F841"]